Add README and initial scripts

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,8 @@
-pandas
-numpy
-scipy
-scikit-learn
-joblib
-anndata
-scanpy
-pytometry
-scanpy[leiden]
-harmony-pytorch
+
+numpy==1.23.0
+pandas==1.5.0
+scikit-image==0.19.3
+scikit-learn==1.2.0
+matplotlib==3.5.1
+jupyter==1.0.0
+scimap==0.1.5
